Fix GH-341: Use `text-align: center;` for features icons.

--- a/widgets/features/css/style.css
+++ b/widgets/features/css/style.css
@@ -36,14 +36,12 @@
   text-decoration: none;
   display: block;
   color: #FFFFFF;
-  width: 1em;
+  width: 100%;
   height: 1em;
   text-align: center;
   position: absolute;
   top: 50%;
-  left: 50%;
   margin-top: -0.5em;
-  margin-left: -0.5em;
   background-size: contain;
 }
 .sow-features-list .sow-features-feature h5 {
